--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "mlx8-w3-transformers"
+name = "mlx8-w4-multimodal-transferlearning"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
