--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ ipython_config.py
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
 uv.lock
+pyproject.toml
 
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
@@ -196,3 +197,7 @@ cython_debug/
 
 .data
 wandb
+
+# Ignore env files inside .ben
+.ben/pytorch_uv/
+.ben/uv.lock
