--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "bitsandbytes",
     "unsloth-zoo",
     "litellm>=1.73.6",
+    "duckdb>=1.3.1",
 ]
 
 # uv add "unsloth[cu121-ampere-torch230] @ git+https://github.com/unslothai/unsloth.git"
