--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "torch",
+    "torch<=2.2",
     "pyarrow",
     "torchvision",
     "datasets",
@@ -26,15 +26,18 @@ dependencies = [
     "qwen-vl-utils[decord]==0.0.8",
     "accelerate",
     "torchaudio",
-    "flash-attn",
-    "unsloth[cu121-ampere-torch230]",
     "bitsandbytes",
     "unsloth-zoo",
     "litellm>=1.73.6",
     "duckdb>=1.3.1",
+    "pytest>=8.4.1",
 ]
 
-# uv add "unsloth[cu121-ampere-torch230] @ git+https://github.com/unslothai/unsloth.git"
-[tool.uv.sources]
-unsloth = { git = "https://github.com/unslothai/unsloth.git" }
+#   "unsloth[cu121-ampere-torch230]",
+ 
+# uv add "unsloth[cu121-ampere-torch231] @ git+https://github.com/unslothai/unsloth.git"
+# [tool.uv.sources]
+# unsloth = { git = "https://github.com/unslothai/unsloth.git" }
 
+# [tool.uv]
+# no-build-isolation-package = ['flash-attn', 'setuptools']
