--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "litellm>=1.73.6",
     "duckdb>=1.3.1",
     "pytest>=8.4.1",
+    "requests>=2.32.4",
 ]
 
 #   "unsloth[cu121-ampere-torch230]",
