--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "python-dotenv",
     "fastapi",
     "uvicorn",
-    "numpy",
+    "numpy<2",
     "matplotlib>=3.10.3",
     "seaborn>=0.13.2",
     "scikit-learn>=1.7.0",
