--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "mlx8-w4-multimodal-transferlearning"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dependencies = [
-    "torch<=2.2",
+    "torch>=2.6",
     "pyarrow",
     "torchvision",
     "datasets",
@@ -21,7 +21,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "scikit-learn>=1.7.0",
     "hdbscan",
-    "scipy>=1.16.0",
+    "scipy",
     "transformers",
     "qwen-vl-utils[decord]==0.0.8",
     "accelerate",
@@ -32,6 +32,7 @@ dependencies = [
     "duckdb>=1.3.1",
     "pytest>=8.4.1",
     "requests>=2.32.4",
+    "unsloth>=2025.6.12",
 ]
 
 #   "unsloth[cu121-ampere-torch230]",
