--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,14 @@
             "request": "launch",
             "program": "${workspaceFolder}/.charles/qwenvl/test_openai_clip.py",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: multimodal_transfer_learing.py",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/.charles/multimodal/multimodal_transfer_learing.py",
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}/.charles/multimodal"
         }
     ]
 }
