--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,9 @@ dependencies = [
     "pytest>=8.4.1",
     "requests>=2.32.4",
     "unsloth>=2025.6.12",
-    "torchmetrics>=1.7.3",
+    "torchmetrics",
     "colorlog>=6.9.0",
+    "evaluate>=0.4.4",
 ]
 
 #   "unsloth[cu121-ampere-torch230]",
