clean up, --embedding --train --test cache data usage, and for clip only use its 512 vision embedding not the extra 256D text embeddings

--- a/.charles/multimodal/.env.example
+++ b/.charles/multimodal/.env.example
@@ -22,3 +22,12 @@ WANDB_PROJECT=mlx8-w4-multimodal-transfer-learning
 
 # HF private token (optional)
 HF_TOKEN=...
+
+
+
+
+check the following is correct or not:
+
+1. save vision embedding is not needed,
+2. init_vision is not needed for training?
+3. 
