--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".clement"]
 	path = .clement
-	url = git@github.com:Clementha/vit_captioning.git
+	url = https://github.com/Clementha/vit_captioning.git
