improvements on Gradio Demo UI

--- a/.charles/multimodal/.env.example
+++ b/.charles/multimodal/.env.example
@@ -34,6 +34,9 @@ HF_TOKEN=...
 
 # Inference settings
 INFERENCE_PROMPT=Examine the image carefully and provide a detailed description covering objects, people, actions, background, and any notable visual elements
+INFERENCE_TEMPERATURE=0.5
+INFERENCE_TOP_P=0.92
+INFERENCE_TOP_K=50
 
 # Training prompt settings - better alternatives to SOS/EOS only
 USE_PROMPT_VARIATION=True
